--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "kbart-to-disk"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+opt-level = 3
+lto = "fat"
 
 [dependencies]
 futures = "0.3.27"
