Doc : adding a documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "kbart-to-disk"
+name = "kbart-harvester"
 version = "0.1.0"
 edition = "2021"
+authors = "Mathis EON<eon@abes.fr>"
 
 [profile.release]
 opt-level = 3
